// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DashboardRows component Renders static elements 1`] = `<Fragment />`;

exports[`DashboardRows component Shows the correct ammount of habits 1`] = `
<Fragment>
  <div
    className="dashboard__row"
    key="check-container-0"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      1
      x) - 
      exercise
    </div>
    <div
      className="dashboard__cell-frequency-container  "
    >
      <div
        className="dashboard__cell"
        key="check-0-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
  <div
    className="dashboard__row"
    key="check-container-1"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      1
      x) - 
      read
    </div>
    <div
      className="dashboard__cell-frequency-container  "
    >
      <div
        className="dashboard__cell"
        key="check-1-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`DashboardRows component marks habits correctly at the last day of the week 1`] = `
<Fragment>
  <div
    className="dashboard__row"
    key="check-container-0"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      6
      x) - 
      ok
    </div>
    <div
      className="dashboard__cell-frequency-container  "
    >
      <div
        className="dashboard__cell"
        key="check-0-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
    </div>
  </div>
  <div
    className="dashboard__row"
    key="check-container-1"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      7
      x) - 
      failed
    </div>
    <div
      className="dashboard__cell-frequency-container  table-danger"
    >
      <div
        className="dashboard__cell"
        key="check-1-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`DashboardRows component marks habits that are completed for that week 1`] = `
<Fragment>
  <div
    className="dashboard__row"
    key="check-container-0"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      3
      x) - 
      ok
    </div>
    <div
      className="dashboard__cell-frequency-container  "
    >
      <div
        className="dashboard__cell"
        key="check-0-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
  <div
    className="dashboard__row"
    key="check-container-1"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      2
      x) - 
      failed
    </div>
    <div
      className="dashboard__cell-frequency-container table-success "
    >
      <div
        className="dashboard__cell"
        key="check-1-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`DashboardRows component marks habits that are not performing well 1`] = `
<Fragment>
  <div
    className="dashboard__row"
    key="check-container-0"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      5
      x) - 
      ok
    </div>
    <div
      className="dashboard__cell-frequency-container  "
    >
      <div
        className="dashboard__cell"
        key="check-0-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-0-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
  <div
    className="dashboard__row"
    key="check-container-1"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      6
      x) - 
      failed
    </div>
    <div
      className="dashboard__cell-frequency-container  table-danger"
    >
      <div
        className="dashboard__cell"
        key="check-1-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-1-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
  <div
    className="dashboard__row"
    key="check-container-2"
  >
    <div
      className="dashboard__cell-habit-container"
    >
      (
      7
      x) - 
      failed
    </div>
    <div
      className="dashboard__cell-frequency-container  table-danger"
    >
      <div
        className="dashboard__cell"
        key="check-2-0"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-2-1"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-2-2"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-2-3"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-2-4"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={true}
          isDisabled={false}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-2-5"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
      <div
        className="dashboard__cell"
        key="check-2-6"
      >
        <HabitCheckbox
          clickHandler={[Function]}
          isChecked={false}
          isDisabled={true}
        />
      </div>
    </div>
  </div>
</Fragment>
`;
